--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#about" class="page-scroll">About</a></li>
+              <li><a href="#about" class="page-scroll">A propos</a></li>
               <li><a href="#services" class="page-scroll">Services</a></li>
-              <li><a href="#portfolio" class="page-scroll">Gallery</a></li>
-              <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
+              <li><a href="#portfolio" class="page-scroll">Réalisations</a></li>
+              <li><a href="#testimonials" class="page-scroll">Avis</a></li>
               <li><a href="#contact" class="page-scroll">Contact</a></li>
             </ul>
           </div>
