--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
 	  <div class="row">
 		<div class="col-xs-12 col-md-6">
 		  <div class="about-text">
-			<h2>Welcome to <span>Landscaper</span></h2>
+			<h2>Bienvenue chez <span>Paysage Alternatif</span></h2>
 			<hr>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
@@ -16,14 +16,14 @@ layout: default
 		<div class="col-xs-12 col-md-3">
 		  <div class="about-media"> <img src="img/about-1.jpg" alt=" "> </div>
 		  <div class="about-desc">
-			<h3>Garden Care</h3>
+			<h3>Lorem ipsum</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis.</p>
 		  </div>
 		</div>
 		<div class="col-xs-12 col-md-3">
 		  <div class="about-media"> <img src="img/about-2.jpg" alt=" "> </div>
 		  <div class="about-desc">
-			<h3>Lawn Care</h3>
+			<h3>Lorem ipsum</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante.</p>
 		  </div>
 		</div>
