--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 
-  <body class="push-page">
+  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     {%- include header.html -%}
       <!-- Include content from pages or posts -->
