--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Landscaper</a> </div>
+            <a class="navbar-brand page-scroll" href="#page-top">Paysages Alternatifs</a> </div>
           
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -27,10 +27,9 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 intro-text">
-                  <h1>Paysage Alternatif</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                    Duis sed dapibus leo nec ornare diam.</p>
-                  <a href="#about" class="btn btn-custom btn-lg page-scroll">More Info</a> </div>
+                  <h1>{{page.heroheader.titre}}</h1>
+                  <p>{{page.heroheader.description}}</p>
+                  <a href="#about" class="btn btn-custom btn-lg page-scroll">Plus d'info</a> </div>
               </div>
             </div>
           </div>
