--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,22 +9,21 @@ layout: default
 		  <div class="about-text">
 			<h2>Bienvenue chez <span>Paysage Alternatif</span></h2>
 			<hr>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-			<a href="#services" class="btn btn-custom btn-lg page-scroll">View All Services</a> </div>
+				{{page.apropos.description | markdownify}}
+			<a href="#services" class="btn btn-custom btn-lg page-scroll">Nos services</a> </div>
 		</div>
 		<div class="col-xs-12 col-md-3">
-		  <div class="about-media"> <img src="img/about-1.jpg" alt=" "> </div>
+		  <div class="about-media"> <img src="{{site.baseurl}}{{page.apropos.sections.section1.image}}" alt=" "> </div>
 		  <div class="about-desc">
-			<h3>Lorem ipsum</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis.</p>
+			<h3>{{page.apropos.sections.section1.titre}}</h3>
+			<p>{{page.apropos.sections.section1.description}}</p>
 		  </div>
 		</div>
 		<div class="col-xs-12 col-md-3">
-		  <div class="about-media"> <img src="img/about-2.jpg" alt=" "> </div>
+		  <div class="about-media"> <img src="{{site.baseurl}}{{page.apropos.sections.section2.image}}" alt=" "> </div>
 		  <div class="about-desc">
-			<h3>Lorem ipsum</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante.</p>
+			<h3>{{page.apropos.sections.section2.titre}}</h3>
+			<p>{{page.apropos.sections.section2.description}}</p>
 		  </div>
 		</div>
 	  </div>
