--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 intro-text">
                   <h1>{{page.heroheader.titre}}</h1>
-                  <p>{{page.heroheader.description}}</p>
+                  <p>{{page.heroheader.soustitre}}</p>
                   <a href="#about" class="btn btn-custom btn-lg page-scroll">Plus d'info</a> </div>
               </div>
             </div>
