--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,39 +33,22 @@ layout: default
   <div id="services">
 	<div class="container">
 	  <div class="col-md-10 col-md-offset-1 section-title text-center">
-		<h2>Our Services</h2>
+		<h2>Nos Services</h2>
 		<hr>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 	  </div>
 	  <div class="row">
+		<!-- Loop pour les services -->
+		{% for services in page.services %}
 		<div class="col-md-3 text-center">
-		  <div class="service-media"> <img src="img/services/service-1.jpg" alt=" "> </div>
+		  <div class="service-media"> <img src="{{site.baseurl}}{{services.image}}" alt=" "> </div>
 		  <div class="service-desc">
-			<h3>Lawn Care</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+			<h3>{{services.titre}}</h3>
+			<p>{{services.description}}</p>
 		  </div>
 		</div>
-		<div class="col-md-3 text-center">
-		  <div class="service-media"> <img src="img/services/service-2.jpg" alt=" "> </div>
-		  <div class="service-desc">
-			<h3>Landscape Design</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-		  </div>
-		</div>
-		<div class="col-md-3 text-center">
-		  <div class="service-media"> <img src="img/services/service-3.jpg" alt=" "> </div>
-		  <div class="service-desc">
-			<h3>Tree Care</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-		  </div>
-		</div>
-		<div class="col-md-3 text-center">
-		  <div class="service-media"> <img src="img/services/service-4.jpg" alt=" "> </div>
-		  <div class="service-desc">
-			<h3>Spring & Fall Cleanup</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-		  </div>
-		</div>
+		{% endfor %} 
+		<!-- Fin loop services-->
 	  </div>
 	</div>
   </div>
@@ -73,7 +56,7 @@ layout: default
   <div id="portfolio">
 	<div class="container">
 	  <div class="section-title text-center center">
-		<h2>Project Gallery</h2>
+		<h2>Nos rélisations</h2>
 		<hr>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 	  </div>
@@ -81,10 +64,10 @@ layout: default
 		<ul class="cat">
 		  <li>
 			<ol class="type">
-			  <li><a href="#" data-filter="*" class="active">All</a></li>
-			  <li><a href="#" data-filter=".lawn">Lawn Care</a></li>
-			  <li><a href="#" data-filter=".garden">Garden Care</a></li>
-			  <li><a href="#" data-filter=".planting">Planting</a></li>
+			  <li><a href="#" data-filter="*" class="active">Tout</a></li>
+			  <li><a href="#" data-filter=".categorie1">Categorie 1</a></li>
+			  <li><a href="#" data-filter=".categorie2">Categorie 2</a></li>
+			  <li><a href="#" data-filter=".categorie3">Categorie 3</a></li>
 			</ol>
 		  </li>
 		</ul>
@@ -92,87 +75,21 @@ layout: default
 	  </div>
 	  <div class="row">
 		<div class="portfolio-items">
-		  <div class="col-sm-6 col-md-4 lawn">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Lorem Ipsum</h4>
+
+			<!-- Loop gallerie réalisations -->
+			{% for gallerie in page.gallerie %}
+			<div class="col-sm-6 col-md-4 {{gallerie.categorie}}">
+				<div class="portfolio-item">
+				<div class="hover-bg"> <a href="{{site.baseurl}}{{gallerie.image}}" loading="lazy" title="Project Title" data-lightbox-gallery="gallery1">
+					<div class="hover-text">
+					<h4>{{gallerie.titre}}</h4>
+					</div>
+					<img src="{{site.baseurl}}{{gallerie.image}}" loading="lazy" class="img-responsive" alt="Project Title"> </a> </div>
 				</div>
-				<img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
 			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 planting">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Adipiscing Elit</h4>
-				</div>
-				<img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 lawn">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Lorem Ipsum</h4>
-				</div>
-				<img src="img/portfolio/03-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 lawn">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Lorem Ipsum</h4>
-				</div>
-				<img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 planting">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Adipiscing Elit</h4>
-				</div>
-				<img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 garden">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Dolor Sit</h4>
-				</div>
-				<img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 garden">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Dolor Sit</h4>
-				</div>
-				<img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 lawn">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Lorem Ipsum</h4>
-				</div>
-				<img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
-		  <div class="col-sm-6 col-md-4 planting">
-			<div class="portfolio-item">
-			  <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-				<div class="hover-text">
-				  <h4>Adipiscing Elit</h4>
-				</div>
-				<img src="img/portfolio/09-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-			</div>
-		  </div>
+			{% endfor %}
+			<!-- Fin Loop gallerie réalisations -->
+
 		</div>
 	  </div>
 	</div>
@@ -182,28 +99,20 @@ layout: default
 	<div class="overlay">
 	  <div class="container">
 		<div class="section-title">
-		  <h2>Testimonials</h2>
+		  <h2>Avis</h2>
 		  <hr>
 		</div>
 		<div class="row">
 		  <div class="col-md-10 col-md-offset-1">
 			<div id="testimonial" class="owl-carousel owl-theme">
-			  <div class="item">
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-				<p>- John DOE, Parker County, TX</p>
-			  </div>
-			  <div class="item">
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-				<p>- Jenny DOE, Parker County, TX</p>
-			  </div>
-			  <div class="item">
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-				<p>- John DOE, Parker County, TX</p>
-			  </div>
-			  <div class="item">
-				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at duis sed dapibus leo nec ornare diam."</p>
-				<p>- John DOE, Parker County, TX</p>
-			  </div>
+				<!-- Loop pour avis -->
+				{% for avis in page.avis %}
+				<div class="item">
+					<p>"{{avis.description}}"</p>
+					<p>- {{avis.titre}}</p>
+				</div>
+				{% endfor %}	
+				<!-- Fin loop pour avis -->
 			</div>
 		  </div>
 		</div>
