Fix lazy load dans gallerie

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,7 +56,7 @@ layout: default
   <div id="portfolio">
 	<div class="container">
 	  <div class="section-title text-center center">
-		<h2>Nos rélisations</h2>
+		<h2>Nos réalisations</h2>
 		<hr>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
 	  </div>
@@ -84,7 +84,7 @@ layout: default
 					<div class="hover-text">
 					<h4>{{gallerie.titre}}</h4>
 					</div>
-					<img data-src="{{site.baseurl}}{{gallerie.image}}" class="img-responsive" alt="Project Title"> </a> </div>
+					<img src="{{site.baseurl}}{{gallerie.image}}" class="img-responsive" alt="Project Title"> </a> </div>
 				</div>
 			</div>
 			{% endfor %}
