Header fix + cleanup

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  {%- seo -%}
- <title>Landscaper</title>
+ <title>Paysages Alternatifs</title>
  <meta name="description" content="">
  <meta name="author" content="">
  {%- feed_meta -%}
