--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
       </nav>
       <!-- Header -->
       <header id="header">
-        <div class="intro" style="{{site.baseurl}}{{page.heroheader.banniere}} top center no-repeat">
+        <div class="intro" style="background:url({{site.baseurl}}{{page.heroheader.banniere}}) top center no-repeat">
           <div class="overlay">
             <div class="container">
               <div class="row">
